with hugo template

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-future-imperfect-slim"]
 	path = themes/hugo-future-imperfect-slim
 	url = https://github.com/pacollins/hugo-future-imperfect-slim.git
+[submodule "themes/hugo-theme-timeline"]
+	path = themes/hugo-theme-timeline
+	url = https://github.com/s4n7h0/hugo-theme-timeline.git
